# Result_Project

./: .gitignore  CMakeLists.txt  answer.json  config.in  config.json  requests.json  search_engine.cpp
Google_tests/: CMakeLists.txt  converterJSONtests.cpp  invertedIndexTests.cpp  limits_test.cpp  searchServerTests.cpp  splitWordTest.cpp  testfiles.h
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  config.h  utilities.h
resource/: file0.txt  file1.txt  file2.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  utilities.cpp
